@@ -3,7 +3,7 @@ set term png truecolor enhanced size 800,600
 k = 1.38e-23
 NA= 6.022e23
 u = 0.001 / NA
-T0 = 273.15
+T0 = 473.15
 a(m,T) = sqrt(k*T/(m*u))
 p(v,m,T) = 4 * pi * v**2 * (m*u/(2*pi*k*T))**1.5 * exp(-m * u * v**2 / (2*k*T))
 q(v,m,T) = erf(v/(sqrt(2)*a(m,T)))-sqrt(2/pi)*(v*exp(-v**2/(2*a(m,T)**2)))/a(m,T)
@@ -22,9 +22,10 @@ set out "graphs.png"
 plot "graphdata2.txt", \
 	f2(x), \
 	"graphdata.txt", \
-	f1(x), \
-	q(x,40,T0)
+	f1(x)
 
+set xtics 50
+set grid
 set style fill transparent solid 0.4
 set out "temperatures.png"
 plot "temperatures.txt" with linespoints
@@ -32,5 +33,4 @@ plot "temperatures.txt" with linespoints
 set out "graphs2.png"
 set xrange [1:700]
 plot g1(x), \
-	g2(x), \
-	100*p(x,40,T0)
+	g2(x)
